--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "string": "cpp",
         "cmath": "cpp",
         "vector": "cpp",
-        "format": "cpp"
+        "format": "cpp",
+        "cctype": "cpp"
     }
 }
